2011-08-29  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/multi.pm: Keep the device_error in the state file.
	* perl/Amanda/Changer/robot.pm: Keep the device_error in the state file.
	* server-src/amtape.pl (inventory): Print inventory device error.
	* installcheck/Amanda_Changer_multi.pl,
	  installcheck/Amanda_Changer_ndmp.pl,
	  installcheck/Amanda_Changer_robot.pl: Fix for device_error in
	  state file.

2011-08-29  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Fix warning.

2011-08-29  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Changer_ndmp.pl,
	  installcheck/Amanda_Changer_robot.pl: Fix for previous patch.

2011-08-29  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: return a reservation even on error.

2011-08-29  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Gunar Gunnarsson
	* server-src/amvault.pl: Cast $dump->{'kb'} to int.

2011-08-24  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: Update S3 location url.

2011-08-24  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/match.c: Fix for 'Trailing backslash' error
	* common-src/match-test.c: Add test

2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c, client-src/calcsize.c,
	  client-src/killpgrp.c, client-src/noop.c,
	  client-src/rundump.c, client-src/runtar.c,
	  client-src/selfcheck.c, client-src/sendbackup.c,
	  client-src/sendsize.c, ndmp-src/amndmjob_main.c,
	  server-src/amcleanupdisk.c, server-src/amindexd.c,
	  server-src/amtrmidx.c, server-src/amtrmlog.c,
	  server-src/driver.c, server-src/dumper.c,
	  server-src/planner.c: Add a --version argument.

2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amservice.c, recover-src/amrecover.c,
	  server-src/amflush.c: #include "getopt.h"

2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>