@@ -1,3 +1,10 @@
+2011-08-30  Jean-Louis Martineau <martineau@zmanda.com>
+	* device-src/s3.c (s3_is_bucket_exists): New function to check if a
+	  bucket exists.
+	* device-src/s3.h (s3_is_bucket_exists): Prototype.
+	* device-src/s3-device.c: Call s3_is_bucket_exists before
+	  s3_make_bucket.
+
 2011-08-29  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Changer/multi.pm: Keep the device_error in the state file.
 	* perl/Amanda/Changer/robot.pm: Keep the device_error in the state file.
